# floyo

./: .editorconfig  .env.ci.example  .env.example  .eslintrc.json  .gitattributes  .gitignore  .lighthouserc.json  .markdown-link-check.json  .pa11yci.json  .performance-budgets.json  .pre-commit-config.yaml  ADDITIONAL_IMPROVEMENTS_COMPLETE.md  AGENT_ENGINE_SUMMARY.md  AI_ML_ROADMAP.md  ALL_ACTIONS_COMPLETE.md  ALL_OPTIMIZATIONS_COMPLETE.md  ALL_REMAINING_WORK_COMPLETE.md  API.md  ARCHITECTURE.md  AUDIT_EXECUTIVE_SUMMARY.md  AURORA_PRIME_README.md  AUTONOMOUS_ENGINE_IMPLEMENTATION.md  AUTONOMOUS_ENGINE_SUMMARY.md  AUTONOMOUS_GUARDIAN_STATUS.md  BUSINESS_INTELLIGENCE_AUDIT.md  CHANGELOG.md  CI_CLEANUP_PLAN.md  CI_STABILIZATION_SUMMARY.md  CLEAN_CODE_CHECKLIST.md  CODE_CLEANUP_SUMMARY.md  CODE_QUALITY.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PSYCHOLOGY_IMPLEMENTATION.md  COMPLETE_WORK_SUMMARY.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  CONFIGURATION_AND_TESTING_COMPLETE.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  (+148 more)
.cursor/: self-tuning.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler-size.yml  labeler.yml  pull_request_template.md
.husky/: pre-commit
.vercel/: project.json.template
.well-known/: security.txt
admin/: metrics.jsx
agent-engine/: QUICKSTART.md  README.md  cli.ts  index.ts  tsconfig.json
automations/: zapier_spec.json
backend/: .pylintrc  __init__.py  analytics.py  analytics_dashboard.py  api_missing_endpoints.py  api_race_guards.py  api_v1.py  api_v1_billing.py  audit.py  (+75 more)
(+1784 files in other folders)
